--- a/archive/css/styles.css
+++ b/archive/css/styles.css
@@ -324,6 +324,13 @@ th {
   text-align: -webkit-match-parent;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 thead,
 tbody,
 tfoot,
